[tool.poetry]
name = "td-0-prediction"
version = "0.0.1"
description = "Tabular based TD(0) Prediction algorithm."
authors = ["Falguni Das Shuvo"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
gymnasium = "0.29.1"
random-walk-env = "0.0.4"
matplotlib = "3.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
