[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TD-0-Prediction"
version = "0.0.2"
dependencies = ["gymnasium==0.29.1", "matplotlib==3.7.5", "random_walk_env==0.0.4"]
requires-python = ">= 3.8"
authors=[{name="Falguni Das Shuvo"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Temporal Difference", "TD 0", "Reinforcement Learning"]

[project.urls]
Repository = "https://github.com/shuvoxcd01/TD-0-Prediction.git"

